snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.081412-1.module.sha256
d9948833bd5d42d916c44021219bf23df4b71037109c6c9b6034071b5857186e